fix for row algorithm