@@ -1,11 +1,11 @@
 package board;
 
-import game.GameSymbol;
 import gameHistory.GameProgress;
 
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 public class RowResolver implements WinResolver {
@@ -13,24 +13,28 @@ public class RowResolver implements WinResolver {
     @Override
     public boolean resolve(GameProgress gameProgress) {
         BoardDimensions dimensions = gameProgress.getConfiguration().getBoardDimensions();
-        List<Move> moves = gameProgress.getMoves();
-        Move lastMove = moves.get(moves.size() - 1);
+        Move lastMove = gameProgress.getLast();
         int row = lastMove.getPosition() / dimensions.getX();
-        GameSymbol symbol = moves.get(moves.size() - 1).getGameSymbol();
-        moves = moves.stream()
-                .filter(m -> m.getGameSymbol().equals(symbol))
+        List<Move> moves = gameProgress.getMoves().stream()
+                .filter(getSymbolPredicate(gameProgress))
                 .filter(m -> m.getPosition() / dimensions.getX() == row)
                 .sorted()
                 .collect(Collectors.toList());
 
-        Set<Move> correctMoves = new HashSet<>();
-        for (int i = 0; i < moves.size(); i++) {
-            for (int j = 0; j < moves.size() - 1; j++) {
-                if(Math.abs(moves.get(i).getPosition() - moves.get(j + 1).getPosition()) == 1) {
-                    correctMoves.add(moves.get(i));
-                }
+        Set<Move> movesToWin = new HashSet<>();
+        for (int i = 0; i < moves.size() - 1; i++) {
+            Move prev = moves.get(i);
+            Move next = moves.get(i + 1);
+            if(Math.abs(next.getPosition() - prev.getPosition()) == 1){
+                movesToWin.add(prev);
+                movesToWin.add(next);
             }
         }
-        return correctMoves.size() >= gameProgress.getConfiguration().getGameSymbolsToWin();
+
+        return movesToWin.size() >= gameProgress.getConfiguration().getGameSymbolsToWin();
+    }
+
+    private Predicate<Move> getSymbolPredicate(GameProgress gameProgress) {
+        return m -> m.getGameSymbol() == gameProgress.getMoves().get(gameProgress.getMoves().size() - 1).getGameSymbol();
     }
 }
